--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ nav {
 }
 
 .cardContainer2{
-  background: linear-gradient(172deg, rgba(56,130,224,1) 0%, rgba(86,110,240,1) 47%, rgba(231,204,255,1) 100%);
+  /*background: linear-gradient(172deg, rgba(56,130,224,1) 0%, rgba(86,110,240,1) 47%, rgba(231,204,255,1) 100%);*/
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.493);
   height: 150px;
   width: 300px;
@@ -123,6 +123,15 @@ nav {
   gap: 5px;
   padding: 5px;
   border-radius: 10px;
+}
+.SILVER {
+  background: linear-gradient(172deg, rgba(222,222,222,1) 0%, rgba(162,162,162,1) 48%, rgb(105, 105, 105) 100%);
+}
+.GOLD {
+  background: linear-gradient(172deg, rgba(254,249,92,1) 0%, rgba(200,172,43,1) 50%, rgba(154,154,3,1) 100%);
+}
+.TITANIUM{
+  background: linear-gradient(172deg, rgba(176,221,230,1) 0%, rgba(194,255,254,1) 50%, rgba(128,192,195,1) 100%);
 }
 .cardTop {
   display: flex;
@@ -143,7 +152,7 @@ nav {
   flex-direction: column;
   align-items: center;
   gap: 4px;
-  color: white;
+  color: rgb(33, 35, 128);
   margin: 0 15px;
 }
 .map {
@@ -153,7 +162,7 @@ nav {
   width: 45px;
 }
 .cardNumber {
-  color: rgb(1, 225, 255);
+  color: rgb(16, 86, 165);
   font-size: 22px;
   margin: 10px 0;
 }
@@ -163,11 +172,11 @@ nav {
   margin: 0 5px;
 }
 .cardTitle {
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 16px;
 }
 .cardData {
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 8px;
 }
 
