--- a/src/index.css
+++ b/src/index.css
@@ -198,7 +198,7 @@ nav {
 
 .loansContainer {
   background-color: rgba(106, 146, 233, 0.664);
-  height: 400px;
+  height: 450px;
   width: 350px;
   display: flex;
   flex-direction: column;
@@ -246,13 +246,21 @@ nav {
   text-align: center;
 }
 .newAccContainer div {
-  background-color: blue;
   border-radius: 5px;
-  height: 30px;
-  width: 70px;
+  height: 330px;
+  width: 250px;
   padding: 6px 8px;
 }
+.newAccContainer div span {
+  font-weight: bold;
+}
 
+.leyend {
+  font-size: 8px;
+  text-align: center;
+  margin-top: 8px;
+  color: rgb(85, 85, 85);
+}
 .newCardContainer {
   display: flex;
   flex-direction: column;
@@ -301,18 +309,31 @@ nav {
 
 .singHello {
   position: relative;
-  top: 140px;
-  left: 12%;
+  top: 200px;
+  left: 41.5%;
   font-size: 28px;
+  color: white;
 }
 .containerSignIn {
   background-color: rgb(25, 42, 197);
   width: 350px;
   height: 220px;
   position: relative;
-  left: 8%;
+  left: 40%;
   top: 250px;
   border-radius: 15px;
+  box-shadow: 2px 2px 6px rgba(62, 79, 236, 0.568);
+}
+.containerSignIn2 {
+  background-color: rgb(25, 42, 197);
+  width: 350px;
+  height: 350px;
+  position: relative;
+  left: 40%;
+  top: 250px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 6px rgba(62, 79, 236, 0.568);
+
 }
 .formIn, .formIn div {
   display: flex;
@@ -334,7 +355,7 @@ nav {
   font-size: 14px;
 }
 
-.formIn button {
+.botonEnviar {
   width: 120px;
   height: 35px;
   border-radius: 15px;
@@ -342,4 +363,231 @@ nav {
   border: none;
   font-size: 14px;
   font-weight: bold;
+}
+
+
+.transfer {
+  background-color: rgba(0, 0, 255, 0.74);
+  width: 350px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 38.5%;
+  top: 100px;
+  border-radius: 15px;
+}
+.transfer h4 {
+  font-size: 16px;
+  color: white;
+}
+.newTransfer, .newTransfer div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.newTransfer div input {
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+
+.loginBanner {
+  width: 700px;
+  height: 550px;
+  position: relative;
+  left: 28%;
+  top: -150px;
+  z-index: -1;
+  border-radius: 10px;
+}
+
+
+.logOut {
+  width: 35px;
+  position: relative;
+  left: 30%;
+  filter: drop-shadow(2px 2px 1px rgb(13, 207, 233));
+}
+
+.loginBanner2 {
+  width: 700px;
+  height: 550px;
+  position: relative;
+  left: 28%;
+  top: -280px;
+  z-index: -1;
+  border-radius: 10px;
+}
+
+.signUpbtn {
+    background-color: rgb(254, 152, 0);
+    border: none;
+    width: 60px;
+    height: 30px;
+    border-radius: 5px;
+    position: relative;
+    left: 58%;
+    top: 210px;
+}
+.signUpbtn a {
+  text-decoration: none;
+  color: black;
+}
+.transactionsListContainer {
+  width: 350px;
+  position: relative;
+  top: 130px;
+  left: 38.5%;
+}
+.transactionsList {
+  background-color: blue;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-bottom: 8px;
+  padding-left: 10px;
+  color: white;
+}
+.transactionsList2 {
+  margin-top: 10px;
+}
+.inactive {
+  color: white;
+}
+.active {
+  color: greenyellow;
+}
+
+@media (max-width: 375px) {
+
+  .containerSignIn {
+    
+    width: 340px;
+    height: 220px;
+    position: relative;
+    left: 4%;
+    top: 250px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 6px rgba(62, 79, 236, 0.568);
+  }
+  .singHello {
+    position: relative;
+    top: 200px;
+    left: 8%;
+    font-size: 28px;
+    color: white;
+  }
+
+  .loginBanner {
+    width: 370px;
+    height: 550px;
+    position: relative;
+    left: 0.5%;
+    top: -210px;
+    z-index: -1;
+    border-radius: 10px;
+  }
+  
+  .signUpbtn {
+    position: relative;
+    left: 270px;
+    top: 210px;
+}
+
+.logOut {
+  width: 28px;
+  position: relative;
+  left: 42%;
+}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 10px 0 10px 30px;
+}
+
+.mainContainer {
+  margin-bottom: 100px;
+}
+
+.transfer {
+  background-color: rgba(0, 0, 255, 0.74);
+  width: 350px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 3.5%;
+  top: 100px;
+  border-radius: 15px;
+}
+
+.transactionsListContainer {
+  width: 350px;
+  position: relative;
+  top: 130px;
+  left: 2%;
+}
+.transactionsList {
+  background-color: blue;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-bottom: 8px;
+  padding-left: 10px;
+  color: white;
+}
+.transactionsList2 {
+  margin-top: 10px;
+}
+.containerSignIn2 {
+  background-color: rgb(25, 42, 197);
+  width: 350px;
+  height: 350px;
+  position: relative;
+  left: 4%;
+  top: 250px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 6px rgba(62, 79, 236, 0.568);
+
+}
+.formIn, .formIn div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  color: white;
+  font-size: 14px;
+}
+
+.formIn div:first-child {
+  margin-top: 15px;
+}
+
+.formIn div input {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+}
+.loginBanner2 {
+  width: 370px;
+  height: 550px;
+  position: relative;
+  left: 2px;
+  top: -280px;
+  z-index: -1;
+  border-radius: 10px;
+}
 }
